Correcting the first draftttt

--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 \label{chap:intro}
-The Artificial Intelligence (AI) spectrum is vast and complex. The diversity amongst models, as well as its constant evolution, makes it difficult to precisely categorize the existing paradigms. From an input standpoint, two complimentary categories can be identified \citep{lieberman_symbolic_nodate}: symbolic and subsymbolic. The term \textit{symbolic} relates to those models whose input is human-readable and follow an inference process that can be understood by humans, while \textit{subsymbolic} models employ arithmetical representations for data representation and are opaque to the user. \cite{lieberman_symbolic_nodate} highlighted the complementarity of both approaches. This general categorization was narrowed in \cite{hopgood_2009_knowledge-based}, where the AI spectrum was divided into knowledge-based systems (symbolic) and computationally intelligent systems (subsymbolic). With the breakthrough of deep learning \citep{raina_2009_gpu,glorot_2014_relu}, this categorization became obsolete, as most of the previous computational intelligence paradigms slowly transitioned to this new category.
+The Artificial Intelligence (AI) spectrum is vast and complex. The diversity amongst models, as well as its constant evolution, makes it difficult to precisely categorize the existing paradigms. From an input standpoint, two complimentary categories can be identified \citep{lieberman_symbolic_nodate}: symbolic and subsymbolic. The term \textit{symbolic} relates to those models whose input is human-readable and follow an inference process that can be understood by humans, while \textit{subsymbolic} models employ arithmetical representations for data representation and are opaque to the user. \cite{lieberman_symbolic_nodate} highlights the complementarity of both approaches. This general categorization is narrowed in \cite{hopgood_2009_knowledge-based}, where the AI spectrum is divided into knowledge-based systems (symbolic) and computationally intelligent systems (subsymbolic). With the breakthrough of deep learning \citep{raina_2009_gpu,glorot_2014_relu}, this classification is expanded to include these paradigms. 
 
 Despite the variety of AI categorizations, the majority of them are founded in the idea of complementarity, which enforces the idea that the combination of antagonistic paradigms leads to new, enhanced approaches that combine the benefits of both elements. This idea is explored in neurosymbolic AI, which describes the set of methods designed for the integration of analogous AI models. Different methods for neurosymbolic system formulation have been proposed throughout the years, depicting the key features that should be exhibited \citep{mcgarry_hybrid_1999}, the criteria on which they should be rooted \citep{mira_neurosymbolic_2004}, or the principles that should be followed \citep{besold_neural-symbolic_2017}. Similar to AI paradigms, neurosymbolic approaches can be also categorized, mostly regarding the coupling degree between the integrated models \citep{medsker2020models,hilario_overview_nodate}.
 
