--- a/5_dlintegrationkbs/dlintegrationkbs.tex
+++ b/5_dlintegrationkbs/dlintegrationkbs.tex
@@ -162,7 +162,7 @@ In the reuse phase, a tailored solution for the input case problem is generated 
     
     \item \textit{Potential disambiguations for text abbreviations:} After computing indicator I4, a list of unidentified tokens is obtained. This set not only comprises noisy entries, such as misspellings, but also abbreviated terms. These tokens are then consulted in the medical terminology SNOMED-CT, seeking to obtain the best applicable term whenever possible.
     
-    \item \textit{Case validation score and confidence value:} A binary scoring system is employed to categorize cases between valid and invalid. A DL model composed by a language modelling model in combination with a random forest classifier is used to score the cases, using the cases already validated by the experts in the revise section as training data. While the score assigned to a given case is not final until it has been revised by the experts, it can provide a reference to the user on whether the report on its current state would be suitable for approval. 
+    \item \textit{Case validation score and confidence value:} A binary scoring system is employed to categorize cases between valid and invalid. A DL model composed by a language modeling model in combination with a random forest classifier is used to score the cases, using the cases already validated by the experts in the revise section as training data. While the score assigned to a given case is not final until it has been revised by the experts, it can provide a reference to the user on whether the report on its current state would be suitable for approval. 
     
     \item \textit{Suggested related terms per category:} CliNER is applied to the content of the top $k$ retrieved cases, extracting a set of terms categorized into three types: disease, test, and treatment. Duplicate entries are removed, and the resulting categorized term list is presented to the user.
 \end{itemize}
